# botcoder

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  .pre-commit-config.yaml  manage.py  pyproject.toml
backend/botcoder/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
backend/users/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
backend/users/management/commands/: create_missing_profiles.py
backend/users/migrations/: 0001_initial.py
frontend/: package.json
